--- a/WindowsFormsApp1/WindowsFormsApp1/Report1.rdlc
+++ b/WindowsFormsApp1/WindowsFormsApp1/Report1.rdlc
@@ -335,7 +335,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>TONGTIEN</rd:DefaultName>
-        <Top>1.38889in</Top>
+        <Top>1.82639in</Top>
         <Left>1.07612in</Left>
         <Height>0.25in</Height>
         <Width>1.98959in</Width>
@@ -365,7 +365,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox10</rd:DefaultName>
-        <Top>1.38889in</Top>
+        <Top>1.82639in</Top>
         <Left>0.5171in</Left>
         <Height>0.25in</Height>
         <Width>0.53125in</Width>
@@ -380,11 +380,75 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
+      <Textbox Name="TIENDUA">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!TIENDUA.Value, "dsGetHoaDon")</Value>
+                <Style>
+                  <Format>#,0'VND';(#,0'VND')</Format>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>TIENDUA</rd:DefaultName>
+        <Top>1.37152in</Top>
+        <Left>0.5171in</Left>
+        <Height>0.25in</Height>
+        <Width>1in</Width>
+        <ZIndex>5</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="TIENTRA">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!TIENTRA.Value, "dsGetHoaDon")</Value>
+                <Style>
+                  <Format>#,0'VND';(#,0'VND')</Format>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>TIENTRA</rd:DefaultName>
+        <Top>1.37152in</Top>
+        <Left>1.93251in</Left>
+        <Height>0.25in</Height>
+        <Width>1in</Width>
+        <ZIndex>6</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
-    <Height>1.63889in</Height>
+    <Height>2.30556in</Height>
     <Style />
   </Body>
-  <Width>3.45362in</Width>
+  <Width>3.38961in</Width>
   <Page>
     <PageHeader>
       <Height>1.33556in</Height>
@@ -537,7 +601,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>0.59375in</Height>
+      <Height>0.9375in</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -631,14 +695,22 @@
           <DataField>TONGTIEN</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="TIENDUA">
+          <DataField>TIENDUA</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="TIENTRA">
+          <DataField>TIENTRA</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
         <Field Name="THOIGIAN">
           <DataField>THOIGIAN</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>db_qlcfDataSet1</rd:DataSetName>
-        <rd:SchemaPath>E:\app\WindowsFormsApp1\WindowsFormsApp1\db_qlcfDataSet1.xsd</rd:SchemaPath>
+        <rd:DataSetName>db_qlcfDataSet2</rd:DataSetName>
+        <rd:SchemaPath>E:\app\WindowsFormsApp1\WindowsFormsApp1\db_qlcfDataSet2.xsd</rd:SchemaPath>
         <rd:TableName>GetHoaDon</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
